# text-based-adventure-game

./: .gitignore  Container.py  Item.py  Key.py  Map.py  NPC.py  README.md  Room.py  Rooms.py  commands.py  inventory.py  main.py  pyproject.toml
game/: GameObject.py  Item.py  Objects.py  Room.py  Rooms.py  Weapon.py  commands.py  inventory.py  items.yaml  main.py  npcs.yaml  player.py  rooms.yaml
game/data/: items.yaml
