[project]
name = "game"
version = "0.1.0"
description = ""
authors = [
    {name = "axoibc",email = "cunndev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
